syntax = "proto3";

package proto.v1;

option go_package = "github.com/HooYa-Bigdata/policyservice/genproto/v1";



// 默认使用RBAC
service PolicyService {
    rpc CreatePolicy(CreatePolicyRequest) returns (CreatePolicyResponse);
    rpc ListPolicy(ListPolicyRequest) returns (ListPolicyResponse);
    rpc DeletePolicy(DeletePolicyRequest) returns (DeletePolicyResponse);
    rpc AddGroup(AddGroupRequest) returns (AddGroupResponse);
    rpc FilterAllowed(FilterAllowedRequest) returns (FilterAllowedResponse);
}


enum Status {
    success = 0;
    failure = 1;
}

message Policy {
    string user = 1;
    string domain =2;
    string obj=3;
    string act=4;
}

message CreatePolicyRequest {
    string user = 1;
    string domain =2;
    string obj=3;
    string act=4;
}

message CreatePolicyResponse {
    string msg=1;
    Status status=2;
}

message ListPolicyRequest {
}

message ListPolicyResponse {
    string msg =1 ;
    Status status=2;
    repeated Policy policies = 3;
}

message DeletePolicyRequest {
    string user = 1;
    string domain =2;
    string obj=3;
    string act=4;
}    

message DeletePolicyResponse {
    string msg =1 ;
    Status status=2;    
}

message AddGroupRequest {
    string user=1;
    string group=2;
    string domain=3;
}

message AddGroupResponse {
    string msg=1;
    Status status=2;
}

message FilterAllowedRequest {
    repeated string resource_list=1;
    string user=2;
    string domain=3;
    string act=4;
}

message FilterAllowedResponse {
    string msg=1;
    Status status=2;   
    repeated string allowed_resource_list=3;
}